# pitak-x

./: .gitignore  AGENTS.md  HANDOFF.md  PLAN.md  README.md  REVIEW_FINDINGS.md  analysis_options.yaml  flutter_rust_bridge.yaml  pubspec.yaml
.github/workflows/: ci.yml
android/: key.properties.example
android/app/: build.gradle.kts
assets/publish/: events.html  index.html
design_preview/: 1_catalog_preview.html  2_events_preview.html  3_catalog_rendered.html  4_drawer_header_options.html
fdroid/: README.md
fdroid/metadata/: dev.khoj.pitaka.fdroid.yml
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugins.cmake
linux/runner/: my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
rust/: Cargo.toml
rust/examples/: gen_test_vault.rs
rust/src/: api.rs  crypto.rs  frb_generated.rs  lib.rs  vault.rs
rust/tests/: real_archive.rs  vault_fixture.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/ios/: rust_lib_pitaka.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_pitaka.podspec
rust_builder/windows/: CMakeLists.txt
test/: widget_test.dart
test/architecture/: domain_purity_test.dart
test/core/: book_cover_test.dart  image_downscaler_test.dart  screen_security_test.dart  secret_bytes_test.dart  secure_passphrase_field_test.dart  timeout_http_client_test.dart
tool/: gen_app_icon.py
windows/: CMakeLists.txt
(+284 files in other folders)
